--- a/index.html
+++ b/index.html
@@ -32,7 +32,94 @@
         <script src="js/script.js"></script>
     </head>
 
-    <body>
+    <body class="d-flex flex-column min-vh-100">
+
+        <header>
+            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+                <!-- <a href="../index.html" class="btn bg-primary text-white position-fixed ms-2" data-bs-toggle="tooltip"
+                   data-bs-placement="right" title="Ne pas inclure dans l'intégration">Retour</a> -->
+                <div class="container">
+                  <a class="navbar-brand text-uppercase fw-bold" href="#">
+                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> MBECK
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link" href="#johndoe">Qui suis-je ?</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#expertise">Compétences</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Projets</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#contact">Expérience</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#contact">Me Contacter</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </nav>
+        </header>
+
+        <main></main>
+
+        <footer class="footer mt-auto py-1 bg-light border-top">
+            <div class="container py-3">
+                <div class="row gy-4 align-items-center">
+                    <div class="col-12 col-md-4">
+                        <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
+                        <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> MBECK
+                        </a>
+                    </div>
+                  <div class="col-12 col-md-4 text-md-center">
+                        <ul class="list-unstyled mb-0">
+                        <li>
+                            <a href="" class="text-decoration-none text-dark" data-bs-toggle="modal" data-bs-target="#MentionsLegales">Mentions légales</a>
+                        </li>
+                        </ul>
+                  </div>
+                  <div class="col-12 col-md-4 text-md-end">
+                        <ul class="list-inline mb-0">
+                            <li class="list-inline-item">
+                                <a href="https://www.linkedin.com/in/lula-jonathan-mbeck-mbôh-bb5312252" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My linkedIn profile"><i class="bi bi-linkedin"></i></a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/luljn" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My github profile"><i class="bi bi-github"></i></a>
+                            </li>
+                        </ul>
+                  </div>
+                </div>
+          
+              <!-- Modal -->
+              <div class="modal fade" id="MentionsLegales" tabindex="-1" aria-labelledby="MentionsLegales" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Mentions Légales</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laudantium optio, praesentium ab delectus odio neque error nobis distinctio necessitatibus suscipit a maiores nostrum quia quos, assumenda fugiat beatae. Unde.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nemo laborum velit dicta eligendi cum aut facilis rerum et, quam culpa nisi doloribus! Repellendus neque quaerat accusamus obcaecati animi voluptatibus!
+                      </p>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est adipisci, voluptas accusamus amet suscipit quasi ea quia facilis vitae impedit commodi eum voluptate corporis tempora nesciunt provident dignissimos in odit.
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sequi repellat labore officiis quas assumenda iusto, repellendus similique natus cumque ut totam consequatur ipsa deserunt soluta corporis dolorem id maxime.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </footer>
         
     </body>
 
