--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="fr">
 
     <head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Luljn</title>
@@ -22,23 +23,15 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- Font Awesome JS -->
-        <script src="https://kit.fontawesome.com/14273d579a.js" crossorigin="anonymous"></script>
-
-        <!-- JS -->
-        <script src="js/script.js"></script>
     </head>
 
     <body class="d-flex flex-column min-vh-100">
 
-        <header>
-            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light">
+        <header class="">
+            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom">
                 <!-- <a href="../index.html" class="btn bg-primary text-white position-fixed ms-2" data-bs-toggle="tooltip"
                    data-bs-placement="right" title="Ne pas inclure dans l'intégration">Retour</a> -->
-                <div class="container">
+                <div class="container gx-5">
                   <a class="navbar-brand text-uppercase fw-bold" href="#">
                     <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> MBECK
                   </a>
@@ -120,6 +113,14 @@
                 </div>
             </div>
         </footer>
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <!-- Font Awesome JS -->
+        <script src="https://kit.fontawesome.com/14273d579a.js" crossorigin="anonymous"></script>
+        <!-- JS -->
+        <script src="js/script.js"></script>
         
     </body>
 
