--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Luljn</title>
 
         <!-- Site icon -->
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img/LJ1.ico">
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
@@ -27,13 +27,13 @@
 
     <body class="d-flex flex-column min-vh-100">
 
-        <header class="">
-            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom">
+        <header class="py-5">
+            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom py-4">
                 <!-- <a href="../index.html" class="btn bg-primary text-white position-fixed ms-2" data-bs-toggle="tooltip"
                    data-bs-placement="right" title="Ne pas inclure dans l'intégration">Retour</a> -->
                 <div class="container gx-5">
                   <a class="navbar-brand text-uppercase fw-bold" href="#">
-                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> MBECK
+                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
                   </a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link" href="#johndoe">Qui suis-je ?</a>
+                        <a class="nav-link" href="#luljn">Qui suis-je ?</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#expertise">Compétences</a>
@@ -62,14 +62,34 @@
               </nav>
         </header>
 
-        <main></main>
+        <main>
+
+            <!-- About-me -->
+            <section  id="luljn" class="py-5">
+                <div class="container">
+                    <div class="row align-items-center gy-4 gy-md-0">
+                        <div class="col-12 col-md-6">
+                            <h1 class="fw-bold">Je suis Lula Jonathan MBECK MBOH</h1><hr>
+                            <h2>Développeur logiciel</h2>
+                            <h2>Étudiant-ingénieur en informatique</h2>
+                            <h2 class="fw-light">Bienvenue dans mon univers créatif</h2>
+                            <a href="" class="btn btn-primary mt-5">Mon expertise</a>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <img src="img/portrait1.jpg" alt="Lula Jonathan" width="100%">
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
 
         <footer class="footer mt-auto py-1 bg-light border-top">
             <div class="container py-3">
                 <div class="row gy-4 align-items-center">
                     <div class="col-12 col-md-4">
                         <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
-                        <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> MBECK
+                        <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
                         </a>
                     </div>
                   <div class="col-12 col-md-4 text-md-center">
