--- a/index.html
+++ b/index.html
@@ -2,32 +2,32 @@
 
 <html lang="fr">
 
-    <head>
+  <head>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Luljn</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Luljn</title>
 
-        <!-- Site icon -->
-        <link rel="icon" type="image/x-icon" href="img/LJ1.ico">
+    <!-- Site icon -->
+    <link rel="icon" type="image/x-icon" href="img/LJ1.ico">
 
-        <!-- Bootstrap -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         
-        <!-- Bootstrap icons -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    </head>
+  </head>
 
-    <body class="d-flex flex-column min-vh-100">
+  <body class="d-flex flex-column min-vh-100">
 
-        <header class="py-5">
+    <header class="py-5">
             <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom py-4">
                 <!-- <a href="../index.html" class="btn bg-primary text-white position-fixed ms-2" data-bs-toggle="tooltip"
                    data-bs-placement="right" title="Ne pas inclure dans l'intégration">Retour</a> -->
@@ -60,9 +60,9 @@
                   </div>
                 </div>
               </nav>
-        </header>
+    </header>
 
-        <main>
+    <main>
 
             <!-- About-me -->
             <section  id="luljn" class="py-5">
@@ -81,10 +81,50 @@
                     </div>
                 </div>
             </section>
+            <!-- About-me -->
 
-        </main>
+          <!-- Contact-me -->
+          <section id="contact" class="py-5">
+            <div class="container">
+              <h2 class="mb-1">Un projet à réaliser ?</h2>
+              <h3 class="fw-light fs-5">Envoyez moi un mail</h3>
 
-        <footer class="footer mt-auto py-1 bg-light border-top">
+              <div class="row gy-4 mt-5">
+                <div class="col-12 col-md-5">
+                  <img src="img/" alt="..." width="100%">
+                </div>
+                <div class="col-12 offset-md-1 col-md-6">
+
+                  <form action="" class="row gy-4">
+                    <div class="col-6">
+                      <label for="prenom" class="form-label">Prénom</label>
+                      <input type="text" class="form-control" name="prenom" id="prenom"> 
+                    </div>
+                    <div class="col-6">
+                      <label for="nom" class="form-label">Nom</label>
+                      <input type="text" class="form-control" name="nom" id="nom">
+                    </div>
+                    <div class="col-12">
+                      <label for="email" class="form-label">Adresse Mail</label>
+                      <input type="text" class="form-control" name="email" id="email">
+                    </div>
+                    <div class="col-12">
+                      <label for="message" class="form-label">Message</label>
+                      <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+                    </div>
+                    <div class="col-12">
+                      <button type="submit" class="btn btn-primary w-100">Envoyer</button>
+                    </div>
+                  </form>
+
+                </div>
+              </div>
+            </div>
+          </section>
+
+    </main>
+
+    <footer class="footer mt-auto py-1 bg-light border-top">
             <div class="container py-3">
                 <div class="row gy-4 align-items-center">
                     <div class="col-12 col-md-4">
@@ -132,16 +172,18 @@
                   </div>
                 </div>
             </div>
-        </footer>
+    </footer>
 
-        <!-- Bootstrap JS -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <!-- Font Awesome JS -->
-        <script src="https://kit.fontawesome.com/14273d579a.js" crossorigin="anonymous"></script>
-        <!-- JS -->
-        <script src="js/script.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- Font Awesome JS -->
+    <script src="https://kit.fontawesome.com/14273d579a.js" crossorigin="anonymous"></script>
+
+    <!-- JS -->
+    <script src="js/script.js"></script>
         
-    </body>
+  </body>
 
 </html>
