--- a/index.html
+++ b/index.html
@@ -28,150 +28,148 @@
   <body class="d-flex flex-column min-vh-100">
 
     <header class="py-5">
-            <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom py-4">
-                <!-- <a href="../index.html" class="btn bg-primary text-white position-fixed ms-2" data-bs-toggle="tooltip"
-                   data-bs-placement="right" title="Ne pas inclure dans l'intégration">Retour</a> -->
-                <div class="container gx-5">
-                  <a class="navbar-brand text-uppercase fw-bold" href="#">
-                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
-                  </a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link" href="#luljn">Qui suis-je ?</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#expertise">Compétences</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Projets</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#contact">Expérience</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#contact">Me Contacter</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
+      <nav class="navbar navbar-expand-md fixed-top navbar-light bg-light border-bottom py-4">
+        <div class="container gx-5">
+          <a class="navbar-brand text-uppercase fw-bold" href="#">
+            <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#luljn">Qui suis-je ?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#expertise">Compétences</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#portfolio">Projets</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Expérience</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact">Me Contacter</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
 
-            <!-- About-me -->
-            <section  id="luljn" class="py-5">
-                <div class="container">
-                    <div class="row align-items-center gy-4 gy-md-0">
-                        <div class="col-12 col-md-6">
-                            <h1 class="fw-bold">Je suis Lula Jonathan MBECK MBOH</h1><hr>
-                            <h2>Développeur logiciel</h2>
-                            <h2>Étudiant-ingénieur en informatique</h2>
-                            <h2 class="fw-light">Bienvenue dans mon univers créatif</h2>
-                            <a href="" class="btn btn-primary mt-5">Mon expertise</a>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <img src="img/portrait1.jpg" alt="Lula Jonathan" width="100%">
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- About-me -->
-
-          <!-- Contact-me -->
-          <section id="contact" class="py-5">
-            <div class="container">
-              <h2 class="mb-1">Un projet à réaliser ?</h2>
-              <h3 class="fw-light fs-5">Envoyez moi un mail</h3>
-
-              <div class="row gy-4 mt-5">
-                <div class="col-12 col-md-5">
-                  <img src="img/" alt="..." width="100%">
-                </div>
-                <div class="col-12 offset-md-1 col-md-6">
-
-                  <form action="" class="row gy-4">
-                    <div class="col-6">
-                      <label for="prenom" class="form-label">Prénom</label>
-                      <input type="text" class="form-control" name="prenom" id="prenom"> 
-                    </div>
-                    <div class="col-6">
-                      <label for="nom" class="form-label">Nom</label>
-                      <input type="text" class="form-control" name="nom" id="nom">
-                    </div>
-                    <div class="col-12">
-                      <label for="email" class="form-label">Adresse Mail</label>
-                      <input type="text" class="form-control" name="email" id="email">
-                    </div>
-                    <div class="col-12">
-                      <label for="message" class="form-label">Message</label>
-                      <textarea class="form-control" name="message" id="message" rows="3"></textarea>
-                    </div>
-                    <div class="col-12">
-                      <button type="submit" class="btn btn-primary w-100">Envoyer</button>
-                    </div>
-                  </form>
-
-                </div>
-              </div>
+      <!-- About-me -->
+      <section  id="luljn" class="py-5">
+        <div class="container">
+          <div class="row align-items-center gy-4 gy-md-0">
+            <div class="col-12 col-md-6">
+              <h1 class="fw-bold">Je suis Lula Jonathan MBECK MBOH</h1><hr>
+              <h2>Développeur logiciel</h2>
+              <h2>Étudiant-ingénieur en informatique</h2>
+              <h2 class="fw-light">Bienvenue dans mon univers créatif</h2>
+              <a href="#expertise" class="btn btn-primary mt-5">Mon expertise</a>
             </div>
-          </section>
+            <div class="col-12 col-md-6">
+              <img src="img/portrait1.jpg" alt="Lula Jonathan" width="100%">
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- About-me -->
+
+      <!-- Contact-me -->
+      <section id="contact" class="py-5">
+        <div class="container">
+          <h2 class="mb-1">Un projet à réaliser ?</h2>
+          <h3 class="fw-light fs-5">Envoyez moi un mail</h3>
+
+          <div class="row gy-4 mt-5">
+            <div class="col-12 col-md-5">
+              <img src="img/grab-a-coffee.jpg" alt="..." width="100%">
+            </div>
+            <div class="col-12 offset-md-1 col-md-6">
+              <form action="" class="row gy-4">
+                <div class="col-6">
+                  <label for="prenom" class="form-label">Prénom</label>
+                  <input type="text" class="form-control" name="prenom" id="prenom"> 
+                </div>
+                <div class="col-6">
+                  <label for="nom" class="form-label">Nom</label>
+                  <input type="text" class="form-control" name="nom" id="nom">
+                </div>
+                <div class="col-12">
+                  <label for="email" class="form-label">Adresse Mail</label>
+                  <input type="text" class="form-control" name="email" id="email">
+                </div>
+                <div class="col-12">
+                  <label for="message" class="form-label">Message</label>
+                  <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+                </div>
+                <div class="col-12">
+                  <button type="submit" class="btn btn-primary w-100">Envoyer</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact-me -->
 
     </main>
 
     <footer class="footer mt-auto py-1 bg-light border-top">
-            <div class="container py-3">
-                <div class="row gy-4 align-items-center">
-                    <div class="col-12 col-md-4">
-                        <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
-                        <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
-                        </a>
-                    </div>
-                  <div class="col-12 col-md-4 text-md-center">
-                        <ul class="list-unstyled mb-0">
-                        <li>
-                            <a href="" class="text-decoration-none text-dark" data-bs-toggle="modal" data-bs-target="#MentionsLegales">Mentions légales</a>
-                        </li>
-                        </ul>
-                  </div>
-                  <div class="col-12 col-md-4 text-md-end">
-                        <ul class="list-inline mb-0">
-                            <li class="list-inline-item">
-                                <a href="https://www.linkedin.com/in/lula-jonathan-mbeck-mbôh-bb5312252" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My linkedIn profile"><i class="bi bi-linkedin"></i></a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="https://github.com/luljn" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My github profile"><i class="bi bi-github"></i></a>
-                            </li>
-                        </ul>
-                  </div>
-                </div>
+      <div class="container py-3">
+        <div class="row gy-4 align-items-center">
+          <div class="col-12 col-md-4">
+            <a class="navbar-brand text-dark text-uppercase fw-bold" href="#">
+              <span class="bg-primary bg-gradient p-1 rounded-3 text-light">Lula</span> JONATHAN
+            </a>
+          </div>
+          <div class="col-12 col-md-4 text-md-center">
+            <ul class="list-unstyled mb-0">
+              <li>
+                <a href="" class="text-decoration-none text-dark" data-bs-toggle="modal" data-bs-target="#MentionsLegales">Mentions légales</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-12 col-md-4 text-md-end">
+            <ul class="list-inline mb-0">
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/lula-jonathan-mbeck-mbôh-bb5312252" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My linkedIn profile"><i class="bi bi-linkedin"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/luljn" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My github profile"><i class="bi bi-github"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
           
-              <!-- Modal -->
-              <div class="modal fade" id="MentionsLegales" tabindex="-1" aria-labelledby="MentionsLegales" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-header">
+        <!-- Modal -->
+        <div class="modal fade" id="MentionsLegales" tabindex="-1" aria-labelledby="MentionsLegales" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalLabel">Mentions Légales</h5>
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laudantium optio, praesentium ab delectus odio neque error nobis distinctio necessitatibus suscipit a maiores nostrum quia quos, assumenda fugiat beatae. Unde.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nemo laborum velit dicta eligendi cum aut facilis rerum et, quam culpa nisi doloribus! Repellendus neque quaerat accusamus obcaecati animi voluptatibus!
-                      </p>
-                      <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est adipisci, voluptas accusamus amet suscipit quasi ea quia facilis vitae impedit commodi eum voluptate corporis tempora nesciunt provident dignissimos in odit.
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sequi repellat labore officiis quas assumenda iusto, repellendus similique natus cumque ut totam consequatur ipsa deserunt soluta corporis dolorem id maxime.
-                      </p>
-                    </div>
-                  </div>
-                </div>
+              </div>
+              <div class="modal-body">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id laudantium optio, praesentium ab delectus odio neque error nobis distinctio necessitatibus suscipit a maiores nostrum quia quos, assumenda fugiat beatae. Unde.
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint nemo laborum velit dicta eligendi cum aut facilis rerum et, quam culpa nisi doloribus! Repellendus neque quaerat accusamus obcaecati animi voluptatibus!
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est adipisci, voluptas accusamus amet suscipit quasi ea quia facilis vitae impedit commodi eum voluptate corporis tempora nesciunt provident dignissimos in odit.
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sequi repellat labore officiis quas assumenda iusto, repellendus similique natus cumque ut totam consequatur ipsa deserunt soluta corporis dolorem id maxime.
+                </p>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
     </footer>
 
     <!-- Bootstrap JS -->
