Experience and skills section added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luljn</title>
+    <title>Lula Jonathan MBECK MBOH</title>
 
     <!-- Site icon -->
     <link rel="icon" type="image/x-icon" href="img/LJ1.ico">
@@ -39,19 +39,19 @@
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
+              <li class="nav-item mx-1">
                 <a class="nav-link" href="#luljn">Qui suis-je ?</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-1">
                 <a class="nav-link" href="#expertise">Compétences</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-1">
                 <a class="nav-link" href="#projets">Projets</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-1">
                 <a class="nav-link" href="#experience">Expérience</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item mx-1">
                 <a class="nav-link" href="#contact">Me Contacter</a>
               </li>
             </ul>
@@ -80,6 +80,14 @@
         </div>
       </section>
       <!-- About-me -->
+
+      <!-- Compétences -->
+      <section id="expertise" class="py-5 bg-light">
+        <div class="container">
+          <h2 class="mb-1">Mes compétences</h2>
+        </div>
+      </section>
+      <!-- Compétences -->
 
       <!-- Projets -->
       <section id="projets" class="py-5">
@@ -155,6 +163,14 @@
         </div>
       </section>
       <!-- Projets -->
+
+      <!-- Expérience -->
+      <section id="experience" class="py-5 bg-light">
+        <div class="container">
+          <h2 class="mb-1">Expérience</h2>
+        </div>
+      </section>
+      <!-- Expérience -->
 
       <!-- Contact-me -->
       <section id="contact" class="py-5">
