More projects added to the projects section

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <section id="projets" class="py-5">
         <div class="container">
           <h2 class="mb-0">Mes projets</h2>
-          <div class="row gy-4 mt-4">
+          <div class="row gy-4 mt-4 justify-content-between">
+            <!-- TSN -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-              <!-- TSN -->
               <div class="card">
                 <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
                 <div class="card-body">
@@ -157,8 +157,40 @@
                   </div>
                 </div>
               </div>
-              <!-- TSN -->
             </div>
+            <!-- TSN -->
+
+            <!-- TSN-2.0 -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
+                <div class="card-body">
+                  <h5 class="card-title">The Social Network - 2.0</h5>
+                  <p class="card-text my-3">
+                   Le réseau social "The Social Network" reprit avec des technologies web avancées (Framework Frontend et API REST).
+                  </p>
+                  <!-- Offcanvas -->
+                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
+                </div>
+              </div>
+            </div>
+            <!-- TSN-2.0 -->
+
+            <!-- Itinerary planner -->
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+              <div class="card">
+                <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
+                <div class="card-body">
+                  <h5 class="card-title">Itinerary planner</h5>
+                  <p class="card-text my-3">
+                    Un logiciel de calcul d'itinéraires dans la région de belfort.
+                  </p>
+                  <!-- Offcanvas -->
+                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
+                </div>
+              </div>
+            </div>
+            <!-- Itinerary planner --> 
           </div>
         </div>
       </section>
