Project images added

--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             <!-- TSN -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
+                <img src="img/TSN/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 1">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network</h5>
                   <p class="card-text my-3">
-                    Un réseau social avec des fonctionnalités de base(ajout de post, commentaires, like, unlike et follow) et développé avec les technologies de base du web
+                    Un réseau social avec des fonctionnalités de base et développé avec les technologies de base du web.
                   </p>
                   <!-- Offcanvas -->
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">En savoir plus</button>
@@ -115,7 +115,7 @@
                       <div id="carouselProject1" class="carousel slide shadow h-100" data-bs-ride="carousel" data-bs-touch="true">
                         <div class="carousel-inner h-100">
                               <div class="carousel-item h-100 active" data-bs-interval="10000">
-                                  <img src="https://picsum.photos/1920/1080?random=11"
+                                  <img src="img/TSN/1.png"
                                         class="d-block w-100" alt="Image slide 1">
                                   <div class="carousel-caption d-none d-md-block">
                                       <h5>Slide 1</h5>
@@ -163,11 +163,11 @@
             <!-- TSN-2.0 -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
+                <img src="img/TSN-2.0/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
                   <p class="card-text my-3">
-                   Le réseau social "The Social Network" reprit avec des technologies web avancées (Framework Frontend et API REST).
+                   Le réseau social "The Social Network" développé avec des technologies web avancées (Framework, API).
                   </p>
                   <!-- Offcanvas -->
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
@@ -179,11 +179,11 @@
             <!-- Itinerary planner -->
             <div class="col-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <img src="https://picsum.photos/300/150?random=1" class="card-img-top" alt="projet 1">
+                <img src="img/IP/logoBelfort.gif" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 3">
                 <div class="card-body">
                   <h5 class="card-title">Itinerary planner</h5>
                   <p class="card-text my-3">
-                    Un logiciel de calcul d'itinéraires dans la région de belfort.
+                    Un logiciel de calcul d'itinéraires dans la ville de belfort et la région de bourgogne.
                   </p>
                   <!-- Offcanvas -->
                   <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">En savoir plus</button>
@@ -262,10 +262,10 @@
           <div class="col-12 col-md-4 text-md-end">
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/lula-jonathan-mbeck-mbôh-bb5312252" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My linkedIn profile"><i class="bi bi-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/lula-jonathan-mbeck-mbôh-bb5312252" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="Mon profil linkedIn"><i class="bi bi-linkedin"></i></a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/luljn" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="My github profile"><i class="bi bi-github"></i></a>
+                <a href="https://github.com/luljn" target="_blank" class="text-decoration-none text-dark fs-2" data-bs-toggle="tooltip" title="Mon profil github"><i class="bi bi-github"></i></a>
               </li>
             </ul>
           </div>
