Competences section updated v1.2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   </head>
 
   <body class="d-flex flex-column min-vh-100">
@@ -86,7 +88,7 @@
         <div class="container">
           <h2 class="mb-1">Mes compétences</h2>
 
-          <!-- Langage de programmation -->
+          <!-- Langages de programmation -->
           <div class="row gy-4 mt-5">
             <div class="col-12 col-md-7">
               <!-- Progress bar -->
@@ -94,8 +96,9 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">HTML5</p>
+                      <i class="fa-solid fa-c fa-2x me-3 text-primary"></i>
+                      <!-- <i class="fab fa-html5 fa-2x"></i> -->
+                      <p class="fw-bold m-0">C/C++</p>
                     </div>
                   </div>
                   <div class="col">
@@ -107,13 +110,31 @@
                   </div>
                 </div>
               </div>
+
+              <!-- <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">C#</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                        aria-valuemax="100" data-bs-toggle="tooltip" title="75%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
   
               <div class="mb-3 p-3 bg-white">
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fab fa-css3-alt fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">CSS3</p>
+                      <i class="fa-brands fa-python fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">Python</p>
                     </div>
                   </div>
                   <div class="col">
@@ -130,8 +151,9 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fab fa-js fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">JS</p>
+                      <i class="fa-brands fa-java fa-2x me-3 text-primary"></i>
+                      <!-- <i class="fab fa-js "></i> -->
+                      <p class="fw-bold m-0">Java</p>
                     </div>
                   </div>
                   <div class="col">
@@ -166,8 +188,8 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fab fa-sass fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">SASS</p>
+                      <i class="fa-brands fa-js fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">JS</p>
                     </div>
                   </div>
                   <div class="col">
@@ -179,6 +201,24 @@
                   </div>
                 </div>
               </div>
+
+              <!-- <div class="mb-3 p-3 bg-white">
+                <div class="row align-items-center">
+                  <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                    <div class="d-flex align-items-center">
+                      <i class="fab fa-sass fa-2x me-3 text-primary"></i>
+                      <p class="fw-bold m-0">TS</p>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="progress">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
               
             </div>
             <div class="col-12 offset-md-1 col-md-4">
@@ -198,8 +238,8 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fab fa-figma fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">Figma</p>
+                      <!-- <i class="fab fa-figma fa-2x me-3 text-primary"></i> -->
+                      <p class="fw-bold m-0">Django</p>
                     </div>
                   </div>
                   <div class="col">
@@ -216,8 +256,8 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fas fa-photo-video fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">Suite Adobe</p>
+                      <!-- <i class="fas fa-photo-video fa-2x me-3 text-primary"></i> -->
+                      <p class="fw-bold m-0">Flask</p>
                     </div>
                   </div>
                   <div class="col">
@@ -234,8 +274,8 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fas fa-palette fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">Design UI</p>
+                      <!-- <i class="fas fa-palette fa-2x me-3 text-primary"></i> -->
+                      <p class="fw-bold m-0">Angular</p>
                     </div>
                   </div>
                   <div class="col">
@@ -252,8 +292,8 @@
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
-                      <i class="fas fa-vial fa-2x me-3 text-primary"></i>
-                      <p class="fw-bold m-0">Design UX</p>
+                      <!-- <i class="fas fa-vial fa-2x me-3 text-primary"></i> -->
+                      <p class="fw-bold m-0">Bootstrap</p>
                     </div>
                   </div>
                   <div class="col">
@@ -266,7 +306,7 @@
                 </div>
               </div>
   
-              <div class="mb-3 p-3 bg-white">
+              <!-- <div class="mb-3 p-3 bg-white">
                 <div class="row align-items-center">
                   <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
                     <div class="d-flex align-items-center">
@@ -282,7 +322,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
             
             <!-- </div> -->
