--- a/index.html
+++ b/index.html
@@ -539,6 +539,27 @@
       <section id="experience" class="py-5 bg-light">
         <div class="container">
           <h2 class="mb-1">Expérience</h2>
+          <div class="row">
+          <div class="col-12 text-center my-5">
+            <h3>ICCSOFT</h3>
+            <br>
+            <h3>Stagiaire en développement logiciel</h3>
+          </div>
+          <div class="d-flex justify-content-center align-items-center">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+            <div class="card">
+              <img src="img/" width="150" height="150" class="card-img-top px-2 py-2" alt="image IPM">
+              <div class="card-body">
+                <h5 class="card-title">Internship-Project-Manager</h5>
+                <p class="card-text my-3">
+                  Une application web de gestion et de suivi des projets de stage.
+                </p>
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
         </div>
       </section>
       <!-- Expérience -->
