Competences progress bars changed

--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                        aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                        aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
                       </div>
                     </div>
                   </div>
@@ -135,8 +135,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -154,8 +154,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -172,8 +172,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="70" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="70%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -190,8 +190,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -240,8 +240,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -258,8 +258,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-100" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="50%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -276,8 +276,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="60" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="60%">
+                      <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
@@ -294,8 +294,8 @@
                   </div>
                   <div class="col">
                     <div class="progress">
-                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="65" aria-valuemin="0"
-                           aria-valuemax="100" data-bs-toggle="tooltip" title="65%">
+                      <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                           aria-valuemax="100" data-bs-toggle="tooltip" title="">
                       </div>
                     </div>
                   </div>
