--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Site icon -->
     <link rel="icon" type="image/x-icon" href="img/LJ1.ico">
 
+    <!-- CSS -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -339,11 +342,14 @@
                 <img src="img/TSN/4.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 1">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network</h5>
-                  <p class="card-text my-3">
+                  <p class="card-text my-4">
                     Un réseau social avec des fonctionnalités de base et développé avec les technologies de base du web.
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">Voir plus</button>
+                  <div class="d-flex flex-column">
+                    <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet1" aria-controls="offcanvasBottom">Voir plus</button>
+                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                  </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet1" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
                       <h5 class="offcanvas-title" id="offcanvasBottomLabel">The Social Network</h5>
@@ -405,11 +411,14 @@
                 <img src="img/TSN-2.0/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 2">
                 <div class="card-body">
                   <h5 class="card-title">The Social Network - 2.0</h5>
-                  <p class="card-text my-3">
+                  <p class="card-text my-4">
                    Le réseau social "The Social Network" développé avec des technologies web avancées (Framework, API).
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">Voir plus</button>
+                  <div class="d-flex flex-column">
+                    <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet2" aria-controls="offcanvasBottom">Voir plus</button>
+                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                  </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet2" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
                       <h5 class="offcanvas-title" id="offcanvasBottomLabel">The Social Network - 2.0</h5>
@@ -471,11 +480,14 @@
                 <img src="img/IP/logoBelfort.gif" width="150" height="150" class="card-img-top px-2 py-2" alt="projet 3">
                 <div class="card-body">
                   <h5 class="card-title">Itinerary planner</h5>
-                  <p class="card-text my-3">
+                  <p class="card-text my-4">
                     Un logiciel de calcul d'itinéraires dans la ville de belfort et la région de bourgogne-franche-comté.
                   </p>
                   <!-- Offcanvas -->
-                  <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
+                  <div class="d-flex flex-column">
+                    <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojet3" aria-controls="offcanvasBottom">Voir plus</button>
+                    <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                  </div>
                   <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojet3" aria-labelledby="offcanvasBottomLabel">
                     <div class="offcanvas-header">
                       <h5 class="offcanvas-title" id="offcanvasBottomLabel">Itinerary planner</h5>
@@ -551,10 +563,13 @@
               <img src="img/IPM/1.png" width="150" height="150" class="card-img-top px-2 py-2" alt="image IPM">
               <div class="card-body">
                 <h5 class="card-title">Internship-Project-Manager</h5>
-                <p class="card-text my-3">
+                <p class="card-text my-4">
                   Une application web de gestion et de suivi des projets de stage.
                 </p>
-                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojetStage" aria-controls="offcanvasBottom">Voir plus</button>
+                <div class="d-flex flex-column">
+                  <button class="btn btn-primary mb-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#infoprojetStage" aria-controls="offcanvasBottom">Voir plus</button>
+                  <a href="" target="_blank" class="btn btn-primary">En savoir plus</a>
+                </div>
                 <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoprojetStage" aria-labelledby="offcanvasBottomLabel">
                   <div class="offcanvas-header">
                     <h5 class="offcanvas-title" id="offcanvasBottomLabel">Internship-Project-Manager</h5>
@@ -649,7 +664,7 @@
           <div class="col-12 col-md-4 text-md-center">
             <ul class="list-unstyled mb-0">
               <li>
-                <a href="" class="text-decoration-none text-dark" data-bs-toggle="modal" data-bs-target="#MentionsLegales">Mentions légales</a>
+                <!-- <a href="" class="text-decoration-none text-dark" data-bs-toggle="modal" data-bs-target="#MentionsLegales">Mentions légales</a> -->
               </li>
             </ul>
           </div>
